[package]
name = "usb-commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
config = { version = "^0.14", features = ["ini"], default-features = false }
dirs = "5.0.1"
log = "0.4"
rusb = "0.9"
rust-ini = "0.19"
shellwords = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = "^0.2"